// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`block-button WS-07 explicit controls renders a button with an rgba background (snapshot) 1`] = `
<DocumentFragment>
  <div>
    <a
      href="https://x.test"
      style="color: rgb(255, 255, 255); font-size: 16px; font-weight: bold; background-color: rgba(37, 99, 235, 0.85); border-radius: 4px; display: inline-block; padding: 12px 20px; text-decoration: none;"
      target="_blank"
    >
      <span>
        <!--[if mso]&gt;&lt;i style="letter-spacing: 20px;mso-font-width:-100%;mso-text-raise:30" hidden&gt;&nbsp;&lt;/i&gt;&lt;![endif]-->
      </span>
      <span>
        Go
      </span>
      <span>
        <!--[if mso]&gt;&lt;i style="letter-spacing: 20px;mso-font-width:-100%" hidden&gt;&nbsp;&lt;/i&gt;&lt;![endif]-->
      </span>
    </a>
  </div>
</DocumentFragment>
`;

exports[`block-button renders with default values 1`] = `
<DocumentFragment>
  <div>
    <a
      class="ebw-d-bg-999999"
      href=""
      style="color: rgb(255, 255, 255); font-size: 16px; font-weight: bold; background-color: rgb(153, 153, 153); border-radius: 4px; display: inline-block; padding: 12px 20px; text-decoration: none;"
      target="_blank"
    >
      <span>
        <!--[if mso]&gt;&lt;i style="letter-spacing: 20px;mso-font-width:-100%;mso-text-raise:30" hidden&gt;&nbsp;&lt;/i&gt;&lt;![endif]-->
      </span>
      <span />
      <span>
        <!--[if mso]&gt;&lt;i style="letter-spacing: 20px;mso-font-width:-100%" hidden&gt;&nbsp;&lt;/i&gt;&lt;![endif]-->
      </span>
    </a>
  </div>
</DocumentFragment>
`;
